@startuml
skinparam classAttributeIconSize 0
!pragma layout smetana


class ViewLoader{
+newWindow(URL,String,Stage):void
+thisWindow(URL,ActionEvent):void
}

class FXMLLoader{
+load(URL):Parent
}

class Stage{
+setTitle(String):void
+setScene(Scene):void
+show():void
}

class Scene{}
class Parent{}

class MainController{
    #onNewCompany(ActionEvent):void
    #onNewCandidate(ActionEvent):void
    #onNewJobPost(ActionEvent):void
    #onQuit(ActionEvent):void
    #onCompaniesSection(ActionEvent):void
    #onCandidatesSection(ActionEvent):void
    #onJobPotsSection(ActionEvent):void
    #onEntityLink(ActionEvent):void
    #onEditButton(ActionEvent):void
    #onDeleteButton(ActionEvent):void
    #onSearchButton()
}


class CandidateProfileEditController{
- agency:Agency
- id:TextField
- nameField:TextField
- genderField:ComboBox
- addressField:TextField
- phoneField:TextField
- scolarshipField:ComboBox
- specialtyField:ComboBox
- branchField:ComboBox
- yearsOfExpField:Spinner
- otherDataField:TextField
+ CandidateNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}
class CompanyEditController{
- agency:Agency
- nameField:TextField
- descriptionField:TextField
- addressField:TextField
- phoneField:TextField
+ CompanyNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}
class JobPostEditController{
- agency:Agency
- companyField:TextField
- descriptionField:TextArea
- salaryField:Spinner
- branchField:ComboBox
- specialtyField:ComboBox
+ JobPostNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}
class CandidateNewController{
- agency:Agency
- id:TextField
- nameField:TextField
- genderField:ComboBox
- addressField:TextField
- phoneField:TextField
- scolarshipField:ComboBox
- specialtyField:ComboBox
- branchField:ComboBox
- yearsOfExpField:Spinner
- otherDataField:TextField
+ CandidateNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}

class JobPostNewController{
- agency:Agency
- companyField:TextField
- descriptionField:TextArea
- salaryField:Spinner
- branchField:ComboBox
- specialtyField:ComboBox
+ JobPostNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}
class InterviewNewController{
- agency:Agency
- candidateField:ComboBox
- dateField:DatePicker
- hoursField:Spinner
- minutesField:Spinner
- timeField:ComboBox
+ InterviewNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}

class CompanyNewController{
- agency:Agency
- nameField:TextField
- descriptionField:TextField
- addressField:TextField
- phoneField:TextField
+ CompanyNewController ()
+ onCancelButton(ActionEvent):void
+ onSaveButton(ActionEvent):void
}
class CompanyViewController{
#onBackButton():void
#onEditButton():void
}
class InterviewController {
#onCancelButton():void
#onOkButton():void
}
class JobPostController{
#onBackButton():void
#onEditButton():void
#onApplyButton():void
}
class CandidateProfileController{
#onBackButton():void
#onEditButton():void
}
MainController --> Agency
CompanyNewController --> Agency
CandidateNewController --> Agency
JobPostNewController --> Agency
InterviewNewController --> Agency
CompanyViewController --> Agency
CompanyEditController --> Agency
JobPostController --> Agency
JobPostEditController --> Agency
InterviewController --> Agency
CandidateProfileEditController --> Agency
CandidateProfileController --> Agency

ViewLoader <-- MainController
ViewLoader <-- CandidateProfileController
ViewLoader <-- CandidateProfileEditController
ViewLoader <-- InterviewController
ViewLoader <-- JobPostController
ViewLoader <-- JobPostEditController
ViewLoader <-- CompanyNewController
ViewLoader <-- CandidateNewController
ViewLoader <-- JobPostNewController
ViewLoader <-- InterviewNewController
ViewLoader <-- CompanyEditController
ViewLoader <-- CompanyViewController
FXMLLoader <-- ViewLoader
Stage <-- ViewLoader
Scene <-- ViewLoader
Parent <-- ViewLoader

@enduml